--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -505,7 +505,7 @@
                 description: "A design-based competition for Mechanical & Civil students to showcase their creativity using CAD software.",
                 rules: ["Individual participation", "Tools: AutoCAD, SolidWorks, CATIA, etc.", "Task will be given during the event"],
                 judging: ["Accuracy", "Creativity", "Detailing", "Innovation"],
-                formLink: "YOUR_GOOGLE_FORM_URL_FOR_DESIGNX"
+                formLink: "https://docs.google.com/forms/d/1IOi2whnwxHdgebeSKqfB23ZUlruyoiqzTq1nMhXlu_4/viewform?edit_requested=true"
             },
             {
                 icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.24a2 2 0 00-1.806.547a2 2 0 00-.547 1.806l.477 2.387a6 6 0 00.517 3.86l.158.318a6 6 0 00.517 3.86l2.387.477a2 2 0 001.806-.547a2 2 0 00.547-1.806l-.477-2.387a6 6 0 00-.517-3.86l-.158-.318a6 6 0 00-.517-3.86l-2.387-.477a2 2 0 00-.547-1.022" transform="rotate(-45 12 12)" /><path d="M12 6V3M12 21v-3" /></svg>`,
