--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -487,7 +487,7 @@
                 description: "A programming contest where students solve problems ranging from beginner to advanced within the given time.",
                 rules: ["Individual participation", "Languages: C, C++, Java, Python", "Questions range from Easy to Hard"],
                 judging: ["Correctness", "Efficiency", "Time Taken"],
-                formLink: "YOUR_GOOGLE_FORM_URL_FOR_ALGOWARS"
+                formLink: "https://forms.gle/XLt3bSh5XVopzk3Y7"
             },
             {
                 icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M12 6V3m0 18v-3" /><circle cx="12" cy="12" r="4" /></svg>`,
